--- a/src/components/module.scss
+++ b/src/components/module.scss
@@ -463,7 +463,7 @@ select.x-inSelect {
 .x-inTxt,
 .x-link,
 select.x-inSelect {
-	white-space: var(--tw, nowrap);
+	white-space: var(--twr, nowrap);
 	text-align: var(--ta, center);
 	color: var(--cl, transparent);
 	background: var(--bg, transparent);
